agora estou utilizando o model mapper no meu projeto